components/Header/HeaderCaption/HeaderCaption.module.scss
.header__something {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Merienda";
  font-weight: normal;

  @include respond(notebook-768) {
    top: 58%;
  }
  @include respond(tablet-560) {
    top: 60%;
  }
}

.header__heading {
  display: inline-block;
  padding: 0 .3rem;
  color: transparent;
  background-image: linear-gradient(145deg, rgba($color-secondary-dark, .8), rgba($color-secondary-light, 1));
  -webkit-background-clip: text;
  backface-visibility: hidden;
  animation: moveInRight 1s ease-out;
}

.header__heading-2 {
  display: inline-block;
  padding: 0 .3rem;
  color: transparent;
  background-image: linear-gradient(145deg, rgba($color-secondary-dark, .8), rgba($color-secondary-light, 1));
  -webkit-background-clip: text;
  backface-visibility: hidden;
  animation: moveInLeft 1s ease-out;
}

@keyframes moveInLeft {
    0% {
        opacity: 0;
        transform: translateX(-10rem);
    }

    80% {
        transform: translateX(1rem);
    }

    100% {
        opacity: 1;
        transform: translate(0);
    }
}

@keyframes moveInRight {
    0% {
        opacity: 0;
        transform: translateX(10rem);
    }

    80% {
        transform: translateX(-1rem);
    }

    100% {
        opacity: 1;
        transform: translate(0);
    }
}

